# Chimera-Engine

./: .gitattributes  Cargo.toml  LICENSE  README.md  check_out.txt  compile-fixes.md  daemon_best_pipelines.json  diag_calls_out.txt  diag_calls_out2.txt  diag_calls_out3.txt  diag_out.txt  diag_out2.txt  target_best_pipelines.json
.claude/: settings.json
.serena/: project.yml
Rust/src/ir/: value.rs
benches/: engine_bench.rs
dashboard/: build_out.txt  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: BestPipeline.jsx  EngineLog.jsx  FitnessChart.jsx  (+7 more)
examples/: diagnose_calls.rs  diagnose_loop.rs
scripts/: deepseek_advisor_test.py
src/: blueprint_archive.rs  dashboard.rs  engine.rs  engine_server.rs  evolution_daemon.rs  goal_definition.rs  interpreter.rs  ir_generator.rs  lib.rs  llvm_frontend.rs  main.rs  module_builders.rs  neural_predictor.rs  profiler.rs  self_evolving_engine.rs  strain.rs  teacher.rs  terminal_chat.rs  validator.rs
src/capi/: bindings.rs
src/ir/: basic_block.rs  function.rs  mod.rs  module.rs  value.rs
src/passes/: block_merging.rs  constant_folding.rs  constant_propagation.rs  cse.rs  dead_code_elimination.rs  loop_unroll.rs  mod.rs  pass_registry.rs  strength_reduction.rs
tests/: mod.rs  property_tests.rs  validator_test.rs
tests/integration/: evolution_test.rs  interpreter_test.rs
tests/ir/: basic_block_test.rs  function_test.rs  mod.rs  module_test.rs  value_test.rs
tests/passes/: constant_folding_test.rs  loop_unroll_test.rs  pass_manager_test.rs
(+1 files in other folders)
