[package]
name = "metamorphic_engine"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "metamorphic"
path = "src/main.rs"

[lib]
name = "metamorphic_engine"
path = "src/lib.rs"

[dependencies]
bumpalo       = "3"
once_cell     = "1"
neuralneat = "0.3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
thiserror     = "1"
log           = "0.4"
env_logger    = "0.11"
anyhow        = "1"
reqwest       = { version = "0.12", features = ["json", "blocking"] }
chrono        = "0.4"
rand          = "0.8"
crossterm     = "0.27"
bincode       = "1.3"
tokio-tungstenite = "0.21"
futures-util = "0.3"
rayon         = "1"
mimalloc      = "0.1"

[dev-dependencies]
proptest  = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "engine_bench"
harness = false

[features]
default  = []
no-capi  = []

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

[workspace]
